--- a/shop/templates/home.html
+++ b/shop/templates/home.html
@@ -1,9 +1,85 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
+<div class="w-full sm:px-5 md:px-20 xl:px-44">
+  {% if discounts %}
+  <div class="mt-20">
+    <h1 class="px-2 text-xl font-bold">
+      Today is your lucky day. Take advantage of our discounts now!
+    </h1>
+    <div
+      class="grid grid-cols-2 sm:grid-cols-3 place-content-center md:place-content-start items-center gap-2 md:flex flex-row flex-wrap"
+    >
+      {% for discount in discounts %}
 
+      <div
+        class="hover:scale-105 group transition duration-200 ease-in my-20 p-2 relative h-44 sm:h-56 text-black border-2 border-backgroundSecondary"
+      >
+        <a
+          href="/shop/product/{{discount.product.id}}"
+          class="text-textPrimary hover:text-black"
+        >
+          <img
+            src="{{discount.product.image_url}}"
+            alt="{{discount.product.name}}-image"
+            class="h-full rounded-none group-hover:opacity-80 transition duration-300 ease-in"
+          />
+        </a>
+        <div class="absolute top-1/2 left-0">
+          <p class="text-2xl -rotate-45 bg-backgroundSecondary px-2">
+            {{discount.percentage}}% off!
+          </p>
+        </div>
+        <div class="flex justify-between items-center text-textPrimary">
+          <div class="py-3">
+            <h2 class="font-semibold">{{discount.product.name}}</h2>
+            <p class="line-through">ksh {{discount.product.price}}</p>
+            <p>ksh {{discount.new_price}}</p>
+            <div class="flex justify-between items-center mt-2">
+              <p class="text-textSecondary">
+                {{discount.product.inventory}} left
+              </p>
+              <i
+                class="fa-solid fa-cart-plus update-cart"
+                data-productId="{{product.id}}"
+                data-action="add"
+              ></i>
+            </div>
+          </div>
+        </div>
+      </div>
 
-{% block content %}
-<div>
-    
+      {% endfor %}
+    </div>
+  </div>
+  {% endif %}
+
+  <div class="my-32">
+    <div
+      class="grid grid-cols-2 sm:grid-cols-3 place-content-center md:place-content-start items-center gap-2 md:flex flex-row flex-wrap"
+    >
+      {% for product in page_obj %} {% include 'product.html' %} {% endfor %}
+    </div>
+    <div class="my-20 flex justify-center">{% include 'paginator.html' %}</div>
+  </div>
+  <div>
+    <h1 class="font-bold text-xl">Looking for something specific?</h1>
+
+    <div class="w-full flex justify-center flex-wrap">
+      {% for category in categories %}
+      <a
+        href="/shop/category/{{category.name}}"
+        class="hover:text-textSecondary"
+      >
+        <div
+          class="w-fit my-10 h-20 px-2 md:px-4 xl:px-6 flex items-center bg-backgroundSecondary rounded mx-2 opacity-80 hover:opacity-100 transition duration-300 ease-out"
+        >
+          <p class="font-bold text-xl md:text-2xl xl:text-3xl">
+            {{category.name}}
+          </p>
+        </div>
+      </a>
+      {% endfor %}
+    </div>
+  </div>
 </div>
 
 {% endblock %}
