--- a/shop/templates/message_form.html
+++ b/shop/templates/message_form.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="w-full flex flex-col items-center text-black min-h-screen">
-    {% include 'nav.html' %}
-    <div class="mt-20 md:mt-44 text-textPrimary">
+<div class="w-full flex flex-col items-center text-black">
+    <div class="mt-20 text-textPrimary">
         <h1 class="text-2xl my-10">Contact us</h1>
         {% include 'form.html' %}
     </div>
