--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Pacifico&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
-* {
-    font-family: 'Rubik', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+body {
+    font-family: 'Open Sans', sans-serif;
 }
 
 .logo h1 {
@@ -34,7 +34,7 @@
 }
 
 .field input, .field select {
-    border-radius: 10px;
+    border-radius: 8px;
     width: 250px;
     color: black;
 }
