--- a/shop/templates/checkout.html
+++ b/shop/templates/checkout.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="">
-    <div class="p-10 flex">
+    <div class="p-10 flex md:px-16 xl:px-56">
         <p>Cart</p>
         <i class="uil uil-angle-right"></i>
         <p class="text-textSecondary">Checkout</p>
