--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,6 +34,7 @@ body {
 }
 
 .field input, .field select {
+    border: 2px solid #810955;
     border-radius: 8px;
     width: 250px;
     color: black;
