feat: upload product images to firebase

--- a/shop/templates/cart.html
+++ b/shop/templates/cart.html
@@ -4,7 +4,7 @@
     class="cart-items relative md:px-16 xl:px-56 w-full flex flex-col mb-20 items-start"
   >
     {% if cart_items %}
-    <div class="flex pb-10 text-xl">
+    <div class="flex pb-10">
       <p class="text-textSecondary">Cart</p>
       <i class="uil uil-angle-right"></i>
       <p>Checkout</p>
