--- a/shop/templates/checkout.html
+++ b/shop/templates/checkout.html
@@ -32,6 +32,7 @@
 
                     <div class="m-5">
                         <h1 class="text-textSecondary font-bold">Shipping Information</h1>
+                        <p class="my-1 text-xs font-bold">Delivery charges apply outside Nairobi</p>
                         {% for field in shipping_form %}
                         <div class="field flex flex-col text-textPrimary my-2">
                             {{ field.errors }}
