--- a/shop/templates/process_order.html
+++ b/shop/templates/process_order.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="process-order flex flex-col items-center">
+<div class="process-order flex flex-col items-center mb-32">
     <div class="flex justify-between items-end w-full px-10 md:px-44 xl:px-64" >
         <div class="back flex justify-start items-center cursor-pointer group my-10">
             <i class="uil uil-arrow-left text-2xl group-hover:-translate-x-10 transition duration-300 ease-in-out"></i>
