--- a/templates/nav.html
+++ b/templates/nav.html
@@ -21,11 +21,11 @@
         </a>
       </div>
     </ul>
-    <div class="nav-icons flex sm:hidden">
+    <div class="nav-icons flex sm:hidden items-center">
       <a href="/shop/search" class="hover:text-textSecondary mx-2"
         ><i class="uil uil-search"></i
       ></a>
-      <a href="/shop/cart" class="search flex hover:text-textSecondary mx-2">
+      <a href="/shop/cart" class="search flex hover:text-textSecondary mx-2 items-center">
         <i class="fa-solid fa-cart-shopping"></i>
         <p class="cart_items text-red-600 text-xs relative bottom-1 left-1"></p>
       </a>
