--- a/shop/templates/book_success.html
+++ b/shop/templates/book_success.html
@@ -1,30 +1,32 @@
 {% extends 'base.html' %} {% block content %}
-<div class="flex flex-col items-center min-h-screen">
-  <div class="flex flex-col items-start">
+<div class="flex flex-col items-center md:my-20 w-full px-3">
+  <h1 class="my-10">Your order has been placed. We will be in touch to confirm the details. Thank you for shopping at Veannes!</h1>
+  <div class="flex flex-col items-start  md:flex-row md:justify-evenly w-full">
     <div class="mb-10">
-      <h1 class="text-xl mb-2 underline">Shipping information</h1>
+      <h1 class="text-xl mb-2 underline font-bold text-textSecondary">Shipping information</h1>
       <div>
         <p>Recipient: {{order.shipping_address.customer}}</p>
         <p>Location: {{order.shipping_address.location}}</p>
         <p>Estate: {{order.shipping_address.estate}}</p>
         <p>House No: {{order.shipping_address.house_no}}</p>
-        <p>You will be required to pay ksh {{order.total_cost}}</p>
+        <p>Delivery Fee: ksh 150</p>
+        <p>You will be required to pay ksh {{order.cart_total}}</p>
       </div>
     </div>
 
-    <div>
-      <h1 class="mb-5 text-xl underline">Order items</h1>
+    <div class="mt-10 md:mt-0">
+      <h1 class="mb-3 text-xl font-bold text-textSecondary underline">Order items</h1>
 
-      <div class="flex flex-col">
+      <div class="flex flex-col items-start">
         {% for item in cart_items %}
         <div
           id="{{item.product.id}}"
-          class="cart-item flex flex-col sm:flex-row items-start sm:items-center justify-center w-full h-44"
+          class="cart-item flex flex-col sm:flex-row items-start sm:items-center sm:justify-start w-full  mb-10 md:border-2 border-backgroundSecondary p-2"
         >
-          <div class="item-img h-full">
+          <div class="item-img ">
             <img
               src="{{item.product.image_url}}"
-              class="h-full"
+              class="w-24"
               alt="{{item.product.name}} image"
             />
           </div>
