--- a/shop/templates/search.html
+++ b/shop/templates/search.html
@@ -20,17 +20,23 @@
         </form>
 
         <div class="mb-44">
-            {% if no_products %}
+            {% if not products and not category_products %}
                 <div class="px-10 sm:px-20 md:px-40 my-20">
                     <p>Oops! We cound not find what you are looking for.</p>
                 </div>
             {% endif %}
             
 
-            {% if products %}
-            <div class="pb-32 grid grid-cols-2 md:grid-cols-3 xl:flex xl:flex-row xl:flex-wrap mt-16 px-10 sm:px-20 md:px-40 items-center">
+            {% if products or category_products %}
+            <div class="pb-32 grid grid-cols-2 gap-2 md:grid-cols-3 xl:flex xl:flex-row xl:flex-wrap mt-16 px-10 sm:px-20 md:px-40 items-center">
 
                 {% for product in products %}
+
+                {% include 'product.html' %}
+
+                {% endfor %}
+
+                {% for product in category_products %}
 
                 {% include 'product.html' %}
 
