feat: delete order cookies after order

--- a/shop/templates/confirm_payment.html
+++ b/shop/templates/confirm_payment.html
@@ -53,6 +53,8 @@
         setTimeout(() => {
             location.reload()
         }, 10000);
+    } else {
+        deleteCartCookies()
     }
 </script>
 {% endblock %}
